@@ -88,7 +88,17 @@ reseth:
 _os_beg:
     dc.l    _os_entry   // os_beg, base of os = _sysbase
 _os_end: 
+#ifdef EMUTOS_RAM
+    // When EmuTOS is run from the RAM, the BSS starts at address 0 as usual,
+    // but the TEXT and DATA segments are just after the BSS.
+    // Thus the first unused RAM address is the end of the DATA segment.
+    dc.l    _edata
+#else
+    // When EmuTOS is run from the ROM, the TEXT and DATA segments stays in the
+    // ROM, but the BSS starts at address 0.
+    // Thus the first unused RAM address is the end of the BSS segment.
     dc.l    _end        // os_end, first byte RAM not used by OS
+#endif
 os_res1:        
     dc.l    _main       // os_res1, reserved
 _os_magic:
